# erl_rpc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: call-zero-arity-fun.rs  get-otp-release-version.rs
src/: lib.rs
