[package]
name = "erl_rpc"
version = "0.2.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Erlang RPC Client"
homepage = "https://github.com/sile/erl_rpc"
repository = "https://github.com/sile/erl_rpc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
coveralls = { repository = "sile/erl_rpc" }

[dependencies]
erl_dist = "0.6"
futures = "0.3"
rand = "0.8"
smol = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
