[package]
name = "erl_rpc"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Erlang RPC Client"
homepage = "https://github.com/sile/erl_rpc"
repository = "https://github.com/sile/erl_rpc"
readme = "README.md"

[dependencies]
erl_dist = "0.8"
futures = "0.3"
rand = "0.10"
smol = "2"

[dev-dependencies]
dirs = "6"
noargs = "0.4"
